<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/cardview1">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:id="@+id/cardviewstart">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardlayout">

                <com.adam.gpsstatus.GpsStatusTextView
                    android:id="@+id/gpsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="18dp"
                    android:text="GPS"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    app:colorClosed="@color/gps_icon_red"
                    app:colorFixed="@color/gps_icon_green"
                    app:colorUnFixed="@color/gps_icon_yellow"/>

                <com.adam.gpsstatus.GpsStatusImageView
                    android:id="@+id/gpsImage"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="5dp"
                    app:drawable0="@drawable/ic_gps_0_24dp"
                    app:drawable1="@drawable/ic_gps_1_24dp"
                    app:drawable2="@drawable/ic_gps_2_24dp"
                    app:drawable3="@drawable/ic_gps_3_24dp"
                    app:thr_1_2="4"
                    app:thr_2_3="7"/>

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:hint="00:00:00"
                    android:textSize="70sp"
                   />

                <TextView
                    android:id="@+id/duration1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/duration"
                    android:layout_centerHorizontal="true"
                    android:text="@string/duration"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/duration1"
                    android:layout_marginLeft="50dp"
                    android:hint="@string/_0_00"
                    android:textSize="50sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/distance"
                    android:layout_below="@+id/distance"
                    android:hint="@string/distance_km" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/pace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/duration1"
                    android:layout_marginRight="50dp"
                    android:hint="@string/_00_00"
                    android:textSize="50sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/pace"
                    android:layout_below="@+id/distance"
                    android:text="@string/avg_pace_min_km" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="210dp"
            android:layout_marginBottom="50dp"
            >

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                tools:context=".Activities.HomeActivity"
                android:name="com.google.android.gms.maps.SupportMapFragment"
               />

            <Button
                android:id="@+id/startactivity"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="START"
                android:background="@drawable/btn_rounded_start"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp" />

        </RelativeLayout>

    </RelativeLayout>



</merge>